--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,8 @@ long_description_content_type = text/markdown
 url = https://github.com/theendlessriver13/solpos
 author = Jonas Kittner
 author_email = theendlessriver13@users.noreply.github.com
+license = MIT
+license_file = LICENSE
 license_files = licenses/LICENSE_SOLPOS
 classifiers =
     License :: OSI Approved :: MIT License
