--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,10 @@ classifiers =
 py_modules = solpos
 python_requires = >=3.7
 
+[coverage:run]
+parallel = True
+plugins = covdefaults
+
 [mypy]
 check_untyped_defs = true
 disallow_any_generics = true
