--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,9 @@ commands =
     coverage combine
     coverage report
 
+[testenv:docs]
+commands = sphinx-build -W -b html docs/src/ _build
+
 [testenv:pre-commit]
 skip_install = true
 deps = pre-commit
