--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = solpos
 version = 0.1.0
-description = "a python wrapper around the NREL's SOLPOS 2.0"
+description = a python wrapper around NREL SOLPOS 2.0
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/theendlessriver13/solpos
@@ -14,10 +14,6 @@ classifiers =
     License :: OSI Approved :: MIT License
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
-    Programming Language :: Python :: 3.7
-    Programming Language :: Python :: 3.8
-    Programming Language :: Python :: 3.9
-    Programming Language :: Python :: 3.10
     Programming Language :: Python :: Implementation :: CPython
 
 [options]
