--- a/.github/workflows/wheels.yaml
+++ b/.github/workflows/wheels.yaml
@@ -38,7 +38,7 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.11.2
         env:
-          CIBW_TEST_COMMAND: python -c "import solpos; print(solpos.solpos(2022, 10, 16, 15, 27, 13, 2, 52, 7))"
+          CIBW_TEST_COMMAND: python -c "import solpos; print(solpos.solpos(2022, 10, 16, 15, 27, 13, 2, latitude=52, longitude=7))"
           CIBW_ARCHS_LINUX: "x86_64 aarch64"
           CIBW_ARCHS_WINDOWS : "AMD64 x86 ARM64"
           CIBW_ARCHS_MACOS: "${{ matrix.macos_arch }}"
