--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@ ci:
     autoupdate_schedule: monthly
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.2.0
+    rev: v4.3.0
     hooks:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
@@ -14,23 +14,26 @@ repos:
     -   id: check-added-large-files
     -   id: requirements-txt-fixer
     -   id: double-quote-string-fixer
+    -   id: check-merge-conflict
 -   repo: https://github.com/pycqa/flake8
-    rev: 4.0.1
+    rev: 5.0.4
     hooks:
     -   id: flake8
-        additional_dependencies: [flake8-typing-imports==1.10.0]
-        args: [--min-python-version=3.7]
+        additional_dependencies:
+            - flake8-typing-imports==1.14.0
+            - flake8-comprehensions==3.10.1
+            - flake8-noqa==1.2.9
 -   repo: https://github.com/pre-commit/mirrors-autopep8
-    rev: v1.6.0
+    rev: v2.0.0
     hooks:
     -   id: autopep8
 -   repo: https://github.com/asottile/reorder_python_imports
-    rev: v3.1.0
+    rev: v3.9.0
     hooks:
     -   id: reorder-python-imports
-        args: [--py3-plus]
+        args: [--py37-plus]
 -   repo: https://github.com/asottile/add-trailing-comma
-    rev: v2.2.3
+    rev: v2.3.0
     hooks:
     -   id: add-trailing-comma
         args: [--py36-plus]
@@ -39,15 +42,15 @@ repos:
     hooks:
       - id: double-indent
 -   repo: https://github.com/asottile/pyupgrade
-    rev: v2.32.0
+    rev: v3.2.0
     hooks:
     -   id: pyupgrade
         args: [--py37-plus]
 -   repo: https://github.com/asottile/setup-cfg-fmt
-    rev: v1.20.1
+    rev: v2.2.0
     hooks:
     -   id: setup-cfg-fmt
 -   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.950
+    rev: v0.982
     hooks:
     -   id: mypy
