--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -50,6 +50,11 @@ repos:
     rev: v2.2.0
     hooks:
     -   id: setup-cfg-fmt
+-   repo: https://github.com/pre-commit/mirrors-clang-format
+    rev: 'v14.0.6'
+    hooks:
+    -   id: clang-format
+        exclude: ^solpos(00)?.(c|h)
 -   repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.982
     hooks:
