--- a/setup.cfg
+++ b/setup.cfg
@@ -4,9 +4,9 @@ version = 0.1.1
 description = a python wrapper around NREL SOLPOS 2.0
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/theendlessriver13/solpos
+url = https://github.com/jkittner/solpos
 author = Jonas Kittner
-author_email = theendlessriver13@users.noreply.github.com
+author_email = jkittner@users.noreply.github.com
 license = MIT
 license_file = LICENSE
 license_files = licenses/LICENSE_SOLPOS
