--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -50,6 +50,7 @@ repos:
     rev: v2.4.0
     hooks:
     -   id: setup-cfg-fmt
+        args: ['--min-py-version=3.7']
 -   repo: https://github.com/pre-commit/mirrors-clang-format
     rev: 'v16.0.6'
     hooks:
